--- a/dashboard/app/templates/index.html
+++ b/dashboard/app/templates/index.html
@@ -1,1 +1,21 @@
-<h1>Hello This Index Page For Website</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>HOSSAM</title>
+</head>
+<body style="text-align: center;font-weight: bold;">
+
+    <div>
+        Welcome To HOSSAM@ORG.
+    </div>
+    <hr>
+<a href="{% url 'all' %}" class="btn btn-info">Show All Emps</a>
+<br> <hr>
+ 
+ </body>
+</html> 
