Add users and show it

--- a/dashboard/app/templates/users.html
+++ b/dashboard/app/templates/users.html
@@ -18,9 +18,14 @@
 
  {% for u in users %}
 
-  {{ u }}
+  {{ u.id }}
 
-{% endfor %} 
+  {{ u.name }}
+
+  {{ u.created_at }}
+
+
+  {% endfor %} 
 
 
     </div>
